[DE] Fix skeleton on IE

--- a/apps/documenteditor/main/resources/less/app.less
+++ b/apps/documenteditor/main/resources/less/app.less
@@ -150,7 +150,7 @@
 
 .doc-placeholder {
     background: #fbfbfb;
-    max-width: 796px;
+    width: 796px;
     margin: 40px auto;
     height: 100%;
     border: 1px solid #dfdfdf;
